@@ -1,6 +1,10 @@
 1.0-devel
 ======================
 
+ * Added portal_atct tool. The new tool will be used for the new topic features
+   and for the plone control panel.
+   [tiran]
+
  * Interface geddon: Merged all interfaces into a single file
    [tiran]
 
